<resources>
    <string name="app_name">Claremont Connection</string>
    <!-- General Place Holder Text -->
    <string name="main">Home Page</string>
    <string name="news_feed_main">News Feed</string>
    <string name="profile_main">Profile</string>
    <string name="find_alumni_main">Find Alumni</string>
    <string name="opportunities_main">Opportunities</string>
    <string name="map_main">Map</string>
    <string name="options_main">Options</string>
    <!-- Toolbar Text -->
    <string name="news_feed">News Feed</string>
    <string name="profile">Profile</string>
    <string name="find_alumni">Find Alumni</string>
    <string name="opportunities">Opportunities</string>
    <string name="map">Map</string>
    <string name="messages">Messages</string>
    <string name="options">Options</string>
    <!-- Profile Text -->

    <!-- Messages Text -->
    <string name="messages_inbox">Messages Inbox</string>

</resources>
