<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_item1"
        android:title="@string/news_feed"
        app:showAsAction="never" />

    <item android:id="@+id/menu_item2"
        android:title="@string/profile"
        app:showAsAction="never" />

    <item android:id="@+id/menu_item3"
        android:title="@string/find_alumni"
        app:showAsAction="never" />

    <item android:id="@+id/menu_item4"
        android:title="@string/opportunities"
        app:showAsAction="never" />

    <item android:id="@+id/menu_item5"
        android:title="@string/map"
        app:showAsAction="never" />

    <item android:id="@+id/menu_item6"
        android:title="@string/messages"
        app:showAsAction="never" />

    <item android:id="@+id/menu_item7"
        android:title="@string/options"
        app:showAsAction="never" />

    <item android:id="@+id/menu_item8"
        android:icon="@drawable/ic_home_icon"
        android:title="item8"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_item9"
        android:title="Test DB"
        app:showAsAction="never" />

    <item android:id="@+id/menu_item10"
        android:title="Recommendations"
        app:showAsAction="never" />
    <item android:id="@+id/menu_item11"
        android:title="Logout"
        app:showAsAction="never" />

</menu>